TechLabels: avoid word wrapping

--- a/components/TechLabels.module.scss
+++ b/components/TechLabels.module.scss
@@ -16,6 +16,7 @@
 	padding: .4em .6em;
 	flex: 1;
 
+	white-space: nowrap;
 	text-align: center;
 	border-radius: 4px;
 }
